Add dotenv package in npm

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "lisence": "GPT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "firebase": "^7.14.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
